src/styles/blocks/_trending.scss
.trending {
  padding: 30px 5px 30px 5px;
  display: flex;
  flex-direction: column;
  gap: 30px;

  @include onTablet {
    padding: 30px 5px 50px 5px;
  }

  @include onDesktop {
    padding: 60px 5px 100px 5px;
    gap: 55px;

    & > *:first-child {
      margin-bottom: 5px;
    }
  }
  
  .slider {
    height: 230px;
    width: 100%;
    display: flex;
    margin: 0 auto;

    @include onTablet {
      height: 270px;
    }
  
    @include onDesktop {
      height: 310px;
    }

    &__container {
      width: 100%;
      display: flex;
      gap: 12px;
      transition: transform 0.5s;

      @include onTablet {
        gap: 24px;
      }
    
      @include onDesktop {
        gap: 36px;
        
      }
    }

    &__item {
      width: calc(100% / 2);
      min-width: calc(100% / 2);
      max-width: calc(100% / 2);
      border-radius: 20px;
      background-size: cover;
      background-position: center;

      &:hover {
        box-shadow: 0px 0px 12px -5px #26FFF2;
      }

      @include onTablet {
        min-width: calc(100% / 4);
        max-width: calc(100% / 4);
      }

      @include onDesktop {
        min-width: 209px;
        max-width: 209px;
      }
    }
  }
}

